--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body{
 .leftMenu{
   display: flex;
   float: left;
-  width: 750px;
+  width: 50rem;
   height: 400px;
   font-size: 1.5rem;
   align-items: center;
