--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,12 @@ body{
   text-align: center;
 }
 .main{
-  margin:20px;
+  margin:1rem;
 }
 .leftMenu{
   display: flex;
   float: left;
-  width: 30em;
+  width: 60%;
   height: 15em;
   font-size: 1.5rem;
   align-items: center;
@@ -26,12 +26,13 @@ body{
 }
 .rightMenu{
   float: right;
+  width:40%;
 }
 .photo{
   display: block;
-  width: 30em;
+  width: 100%;
   height: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
   object-fit: contain;
 }
 .btn{
