--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,11 @@ body{
   text-align: center;
 }
 .main{
+  display: flex;
   margin:1rem;
 }
 .leftMenu{
   display: flex;
-  float: left;
   width: 60%;
   height: 15em;
   font-size: 1.5rem;
@@ -25,14 +25,13 @@ body{
   justify-content: center 
 }
 .rightMenu{
-  float: right;
   width:40%;
 }
 .photo{
   display: block;
   width: 100%;
-  height: 100%;
-  margin-bottom: 1em;
+  height: 500px;
+  margin-bottom: 0.5rem;
   object-fit: contain;
 }
 .btn{
