--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
-.clearfix:after {
-  display: block;
-  clear: both;
-  content: "";
-  }
+
 body{
   margin: 0;
-  border-bottom: 1px solid black;
 }
 .top{
   background-color:#c0c0c0;;
@@ -15,6 +10,7 @@ body{
 .main{
   display: flex;
   margin:1rem;
+  border-bottom: 1px solid black;
 }
 .leftMenu{
   display: flex;
@@ -22,7 +18,7 @@ body{
   height: 15em;
   font-size: 1.5rem;
   align-items: center;
-  justify-content: center 
+  justify-content: center ;
 }
 .rightMenu{
   width:40%;
@@ -31,7 +27,6 @@ body{
   display: block;
   width: 100%;
   height: 500px;
-  margin-bottom: 0.5rem;
   object-fit: contain;
 }
 .btn{
@@ -41,6 +36,57 @@ body{
   border-radius: 1px;
   background: #4676D7;
   color: #fff;
+  margin-bottom: 0.5rem;
   padding: 8px 16px;
   font-size: 16px;
+}
+.dogForm{
+  width:40%;
+  margin:0 auto;
+}
+.cp_ipselect {
+	overflow: hidden;
+	width: 90%;
+	margin: 2em auto;
+	text-align: center;
+}
+.cp_ipselect select {
+	width: 100%;
+	padding-right: 1em;
+	cursor: pointer;
+	text-indent: 0.01px;
+	text-overflow: ellipsis;
+	border: none;
+	outline: none;
+	background: transparent;
+	background-image: none;
+	box-shadow: none;
+	-webkit-appearance: none;
+	appearance: none;
+}
+.cp_ipselect select::-ms-expand {
+    display: none;
+}
+.cp_ipselect.cp_sl01 {
+	position: relative;
+	border: 1px solid #bbbbbb;
+	border-radius: 2px;
+	background: #ffffff;
+}
+.cp_ipselect.cp_sl01::before {
+	position: absolute;
+	top: 0.8em;
+	right: 0.9em;
+	width: 0;
+	height: 0;
+	padding: 0;
+	content: '';
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid #666666;
+	pointer-events: none;
+}
+.cp_ipselect.cp_sl01 select {
+	padding: 8px 38px 8px 8px;
+	color: #666666;
 }
