--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@ body{
 .photo{
   display: block;
   width: 100%;
-  height: 500px;
-  object-fit: contain;
+  height: 400px;
+  object-fit: cover;
 }
 .btn{
   float: right;
@@ -36,57 +36,44 @@ body{
   border-radius: 1px;
   background: #4676D7;
   color: #fff;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-  padding: 8px 16px;
+  padding: 4px 16px;
   font-size: 16px;
 }
 .dogForm{
-  width:40%;
-  margin:0 auto;
+  width: 40%;
+  margin:1rem auto;
 }
-.cp_ipselect {
-	overflow: hidden;
-	width: 90%;
-	margin: 2em auto;
-	text-align: center;
+.dogForm select{
+  width:20rem;
+  margin-left: 1rem;
 }
-.cp_ipselect select {
-	width: 100%;
-	padding-right: 1em;
-	cursor: pointer;
-	text-indent: 0.01px;
-	text-overflow: ellipsis;
-	border: none;
-	outline: none;
-	background: transparent;
-	background-image: none;
-	box-shadow: none;
-	-webkit-appearance: none;
-	appearance: none;
+.showBtn{
+  float: right;
+  appearance: none;
+  border: 0;
+  border-radius: 1px;
+  background: #4676D7;
+  color: #fff;
+  margin-left:1rem;
+  padding: 4px 50px;
+  font-size: 16px;
 }
-.cp_ipselect select::-ms-expand {
-    display: none;
+.flex-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center ;
 }
-.cp_ipselect.cp_sl01 {
-	position: relative;
-	border: 1px solid #bbbbbb;
-	border-radius: 2px;
-	background: #ffffff;
+.image-wrap{
+  margin: 20px 30px;
 }
-.cp_ipselect.cp_sl01::before {
-	position: absolute;
-	top: 0.8em;
-	right: 0.9em;
-	width: 0;
-	height: 0;
-	padding: 0;
-	content: '';
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-top: 6px solid #666666;
-	pointer-events: none;
-}
-.cp_ipselect.cp_sl01 select {
-	padding: 8px 38px 8px 8px;
-	color: #666666;
+.image-wrap img{
+  display: block;
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
+  
 }
